SPA-1370. Hall Monitor PWA layout issues

--- a/src/app/hall-monitor/hall-monitor.component.scss
+++ b/src/app/hall-monitor/hall-monitor.component.scss
@@ -91,7 +91,7 @@
       }
 
       div.hall-monitor-bottom {
-        min-height: 100vh;
+        //min-height: 100vh;
       }
     }
   }
