--- a/src/app/my-room/my-room.component.scss
+++ b/src/app/my-room/my-room.component.scss
@@ -55,7 +55,7 @@
     //width: initial;
     //margin: 0;
     width: 100%;
-    height: calc(100vh - 78px);
+    //height: calc(100vh - 78px);
   }
 
   @media all and (max-width: 1024px) and (min-width: 768px) {
